<?xml version="1.0" encoding="utf-8"?>
<<<<<<< HEAD
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
=======
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
>>>>>>> cde8271ac0f7508a8a8c4070e335f436e6dcba57
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
<<<<<<< HEAD
    android:background="@drawable/pexels_gradienta_7130466"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/displayRow"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="100dp"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@id/gridLayout"
        app:layout_constraintTop_toTopOf="parent" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="0dp"
        android:background="#0018FFFF"
        android:layout_marginStart="25dp"
        android:columnCount="3"
        android:rowCount="6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/displayRow"
        tools:layout_editor_absoluteX="49dp">

        <Button
            android:id="@+id/button7"
            android:layout_width="120dp"
            android:layout_height="90dp"
            android:background="@drawable/purplestar"
            android:backgroundTint="#BA40FB"
            android:text="@string/button_seven"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button8"
            android:layout_width="120dp"
            android:layout_height="90dp"
            android:background="@drawable/purplestar"
            android:backgroundTint="#BA40FB"
            android:text="@string/button_eight"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button9"
            android:layout_width="120dp"
            android:layout_height="90dp"
            android:background="@drawable/purplestar"
            android:backgroundTint="#BA40FB"
            android:text="@string/button_nine"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button4"
            android:layout_width="120dp"
            android:layout_height="90dp"
            android:background="@drawable/purplestar"
            android:backgroundTint="#BA40FB"
            android:text="@string/button_four"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button5"
            android:layout_width="120dp"
            android:layout_height="90dp"
            android:background="@drawable/purplestar"
            android:backgroundTint="#BA40FB"
            android:text="@string/button_five"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button6"
            android:layout_width="120dp"
            android:layout_height="90dp"
            android:background="@drawable/purplestar"
            android:backgroundTint="#BA40FB"
            android:text="@string/button_six"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button1"
            android:layout_width="120dp"
            android:layout_height="90dp"
            android:background="@drawable/purplestar"
            android:backgroundTint="#BA40FB"
            android:text="@string/button_one"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button2"
            android:layout_width="120dp"
            android:layout_height="90dp"
            android:background="@drawable/purplestar"
            android:backgroundTint="#BA40FB"
            android:text="@string/button_two"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button3"
            android:layout_width="120dp"
            android:layout_height="90dp"
            android:background="@drawable/purplestar"
            android:backgroundTint="#BA40FB"
            android:text="@string/button_three"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonPlus"
            android:layout_width="120dp"
            android:layout_height="90dp"
            android:background="@drawable/purplestar"
            android:text="@string/button_plus"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonMinus"
            android:layout_width="120dp"
            android:layout_height="90dp"
            android:background="@drawable/purplestar"
            android:text="@string/button_minus"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonMultiply"
            android:layout_width="120dp"
            android:layout_height="90dp"
            android:background="@drawable/purplestar"
            android:text="@string/button_multiply"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonDivide"
            android:layout_width="120dp"
            android:layout_height="90dp"
            android:background="@drawable/purplestar"
            android:text="@string/button_divide"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button0"
            android:layout_width="120dp"
            android:layout_height="90dp"
            android:background="@drawable/purplestar"
            android:backgroundTint="#BA40FB"
            android:text="@string/button_zero"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonEquals"
            android:layout_width="120dp"
            android:layout_height="90dp"
            android:background="@drawable/purplestar"
            android:text="@string/button_equal"
            android:textSize="20sp"
            android:enabled="true"
            android:textStyle="bold" />

    </GridLayout>



</androidx.constraintlayout.widget.ConstraintLayout>
=======
    tools:context=".MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/fragmentContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        </LinearLayout>
    </ScrollView>
</FrameLayout>
>>>>>>> cde8271ac0f7508a8a8c4070e335f436e6dcba57
